--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,9 @@
  *
  * @lastmodified 2014-02-07
 */
-* {
+*,
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
