Changed navigation background-color

--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@
 // Variable
 $horizontal_navigation: true; // horizontal navigation -> true ; vertical navigation -> false
 
-$nav_bg: red;
+$nav_bg: #222;
 $link_color: #fff;
 $warning_bg: tomato;
 
