--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ $warning_bg:  tomato;
 }
 
 // Styling the navigation
-.nav {
+nav {
   color: #fff;
   font-family: Verdana, sans-serif;
   font-size: .875em;
