--- a/style.scss
+++ b/style.scss
@@ -12,10 +12,11 @@
  * @see @ffoodd_fr on Twitter
  * @see ffoodd.fr
  *
- * @lastmodified 2014-05-02
+ * @lastmodified 2014-05-06
+ * @note Corrected some little stuff
 */
 
-// Variable
+// Variables
 $horizontal_navigation: true; // horizontal navigation -> true ; vertical navigation -> false
 
 $nav_bg:      #222;
@@ -33,7 +34,7 @@ $warning_bg:  tomato;
 // Styling the navigation
 nav {
   color: #fff;
-  font-family: Verdana, sans-serif;
+  font-family: 'Verdana', sans-serif;
   font-size: .875em;
   list-style-type: none;
   margin: 5em;
